# vllm-veille-techno

./: .pre-commit-config.yaml  .yo-rc.json  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/actions/install_dependencies/: action.yml
src/: __init__.py  run_inferences.py
tests/: __init__.py
